# 99purityX-backend

./: .gitignore  Dockerfile  README.md  alembic.ini  promote_admin.py  pyproject.toml  requirements.txt  seed.py  seed_demo_data.py  setup_test_users.py  start.sh
app/: main.py
app/config/: security.py  settings.py
app/infrastructure/database/: mixins.py  models.py  session.py
app/infrastructure/database/migrations/: env.py
app/modules/analytics/api/: analytics_routes.py
app/modules/analytics/models/: patient_health_score_model.py  program_analytics_model.py  provider_analytics_model.py
app/modules/analytics/repositories/: analytics_repository.py
app/modules/analytics/schemas/: analytics_schema.py
app/modules/analytics/services/: analytics_service.py
app/modules/appointments/api/: appointment_routes.py
app/modules/appointments/constants/: appointment_constants.py
app/modules/appointments/enums/: appointment_enums.py
app/modules/appointments/models/: appointment_model.py
app/modules/appointments/repositories/: appointment_repository.py
app/modules/appointments/schemas/: appointment_schema.py
app/modules/appointments/services/: appointment_service.py
app/modules/audit/api/: audit_routes.py
app/modules/audit/enums/: audit_enums.py
app/modules/audit/models/: audit_log_model.py
app/modules/audit/repositories/: audit_repository.py
app/modules/audit/schemas/: audit_schema.py
app/modules/audit/services/: audit_service.py
app/modules/audit/utils/: audit_context.py
app/modules/auth/api/: rbac.py  (+3 more)
app/scripts/: seed_rbac.py  seeds.py
(+100 files in other folders)
